# books

./: .envsample  pyproject.toml
books/: db.sqlite3
books/core/: settings.py  urls.py
books/users/: admin.py  forms.py  models.py  views.py
books/users/migrations/: 0001_initial.py
